[gd_scene load_steps=7 format=3 uid="uid://gxf1y4fs3xkm"]

[ext_resource type="Script" path="res://Scripts/maze_minigame.gd" id="1_5rbpk"]

[sub_resource type="LabelSettings" id="LabelSettings_ge656"]
font_size = 32
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vogyf"]
font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32lkq"]
size = Vector2(30, 136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgscs"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa1m2"]
size = Vector2(40, 40)

[node name="MazeMinigame" type="CanvasLayer"]
script = ExtResource("1_5rbpk")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer"]
layout_mode = 2
color = Color(0.205364, 0.316764, 0.432041, 0.952941)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "หยิบไอเท็ม"
label_settings = SubResource("LabelSettings_ge656")
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ลากไอเท็มออกจากเขาวงกตโดยไม่ให้ชนผนัง!"
label_settings = SubResource("LabelSettings_vogyf")
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "การชน: 0/2"
horizontal_alignment = 1

[node name="MazeContainer" type="Node2D" parent="."]
position = Vector2(51.935, 47.82)
scale = Vector2(0.9, 0.9)

[node name="MazeWall1" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(264.37, 170)
scale = Vector2(1, 3)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall1"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall1"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall2" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(864.91, 279.515)
scale = Vector2(1, 2.135)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall2"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall2"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall3" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(724.11, 193.355)
scale = Vector2(1, 1.9)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall3"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall3"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall6" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(568.245, 336.13)
scale = Vector2(1, 1.7)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall6"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall6"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall8" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(461, 252.89)
scale = Vector2(1, 0.8)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall8"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall8"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall7" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(568.245, 429.085)
rotation = 1.5708
scale = Vector2(1, 1.5)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall7"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall7"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall10" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(362.405, 328.635)
rotation = 1.5708
scale = Vector2(1, 0.5)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall10"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall10"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall9" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(621.875, 249.085)
rotation = 1.5708
scale = Vector2(1, 1.5)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall9"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall9"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall4" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(894.94, 548.19)
rotation = 1.5708
scale = Vector2(1, 4.635)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall4"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall4"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="MazeWall5" type="StaticBody2D" parent="MazeContainer"]
position = Vector2(894.94, 170.15)
rotation = 1.5708
scale = Vector2(1, 4.635)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/MazeWall5"]
offset_right = 29.985
offset_bottom = 136.13
color = Color(0.480557, 0, 0.0454672, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/MazeWall5"]
position = Vector2(15, 68)
shape = SubResource("RectangleShape2D_32lkq")

[node name="StartZone" type="Area2D" parent="MazeContainer"]
position = Vector2(488.02, 468)
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="MazeContainer/StartZone"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.621524, 0.621524, 0.621524, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MazeContainer/StartZone"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_kgscs")

[node name="Item" type="RigidBody2D" parent="."]
position = Vector2(442.93, 494.62)
mass = 2.5
gravity_scale = 0.0
lock_rotation = true
linear_damp = 5.0

[node name="ColorRect" type="ColorRect" parent="Item"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.71655, 0.511103, 0.2477, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_oa1m2")
