# maze_minigame.gd
extends CanvasLayer

signal completed

# UI References
@onready var title_label = $Panel/MarginContainer/VBoxContainer/TitleLabel
@onready var instruction_label = $Panel/MarginContainer/VBoxContainer/InstructionLabel
@onready var status_label = $Panel/MarginContainer/VBoxContainer/StatusLabel

# Game References
@onready var maze_container = $MazeContainer
@onready var item = $MazeContainer/Item
@onready var start_zone = $MazeContainer/StartZone

# Game State
var is_active: bool = false
var is_dragging: bool = false
var collision_count: int = 0
var max_collisions: int = 2
var mouse_offset: Vector2 = Vector2.ZERO

func _ready():
	hide()
	
	# à¸•à¸±à¹‰à¸‡à¸„à¹ˆà¸² Item
	if item:
		item.body_entered.connect(_on_item_collision)
		item.freeze = true  # à¸«à¸¢à¸¸à¸” physics à¸•à¸­à¸™à¹€à¸£à¸´à¹ˆà¸¡à¸•à¹‰à¸™
	
	# à¹€à¸Šà¹‡à¸„à¸–à¹‰à¸²à¸£à¸±à¸™à¸„à¸™à¹€à¸”à¸µà¸¢à¸§
	if get_parent() == get_tree().root:
		start_minigame()

func start_minigame():
	"""à¹€à¸£à¸´à¹ˆà¸¡à¹€à¸à¸¡"""
	print("[MazeMinigame] à¹€à¸£à¸´à¹ˆà¸¡à¸¡à¸´à¸™à¸´à¹€à¸à¸¡")
	show()
	is_active = true
	collision_count = 0
	_reset_item()
	_update_ui()

func _reset_item():
	"""à¸£à¸µà¹€à¸‹à¹‡à¸•à¹„à¸­à¹€à¸—à¹‡à¸¡à¸à¸¥à¸±à¸šà¹„à¸›à¸•à¸³à¹à¸«à¸™à¹ˆà¸‡à¹€à¸£à¸´à¹ˆà¸¡à¸•à¹‰à¸™"""
	if item and start_zone:
		item.global_position = start_zone.global_position
		item.linear_velocity = Vector2.ZERO
		item.angular_velocity = 0
		item.freeze = true

func _input(event):
	if not is_active or not item:
		return
	
	# à¹€à¸£à¸´à¹ˆà¸¡à¸¥à¸²à¸
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
		if event.pressed:
			# à¹€à¸Šà¹‡à¸„à¸§à¹ˆà¸²à¸„à¸¥à¸´à¸à¹‚à¸”à¸™à¹„à¸­à¹€à¸—à¹‡à¸¡à¹„à¸«à¸¡
			var space_state = get_viewport().world_2d.direct_space_state
			var params = PhysicsPointQueryParameters2D.new()
			params.position = get_viewport().get_mouse_position()
			params.collide_with_bodies = true
			
			var results = space_state.intersect_point(params, 1)
			
			if results.size() > 0 and results[0].collider == item:
				is_dragging = true
				item.freeze = false
				mouse_offset = item.global_position - item.get_global_mouse_position()
				print("[MazeMinigame] à¹€à¸£à¸´à¹ˆà¸¡à¸¥à¸²à¸à¹„à¸­à¹€à¸—à¹‡à¸¡")
		else:
			# à¸›à¸¥à¹ˆà¸­à¸¢à¸¥à¸²à¸
			if is_dragging:
				is_dragging = false
				print("[MazeMinigame] à¸›à¸¥à¹ˆà¸­à¸¢à¹„à¸­à¹€à¸—à¹‡à¸¡")
	
	# à¸¥à¸²à¸à¹„à¸­à¹€à¸—à¹‡à¸¡
	if event is InputEventMouseMotion and is_dragging:
		var target_pos = item.get_global_mouse_position() + mouse_offset
		item.linear_velocity = (target_pos - item.global_position) * 10

func _on_item_collision(body: Node):
	"""à¹€à¸¡à¸·à¹ˆà¸­à¹„à¸­à¹€à¸—à¹‡à¸¡à¸Šà¸™à¸œà¸™à¸±à¸‡"""
	if not is_active:
		return
	
	# à¸–à¹‰à¸²à¸Šà¸™à¸œà¸™à¸±à¸‡ (StaticBody2D)
	if body is StaticBody2D:
		collision_count += 1
		print("[MazeMinigame] à¸Šà¸™à¸œà¸™à¸±à¸‡! (%d/%d)" % [collision_count, max_collisions])
		_update_ui()
		
		# à¹€à¸Šà¹‡à¸„à¸§à¹ˆà¸²à¸Šà¸™à¸„à¸£à¸šà¸«à¸£à¸·à¸­à¸¢à¸±à¸‡
		if collision_count >= max_collisions:
			_restart_game()

func _restart_game():
	"""à¹€à¸£à¸´à¹ˆà¸¡à¹€à¸à¸¡à¹ƒà¸«à¸¡à¹ˆà¸—à¸±à¸™à¸—à¸µ"""
	print("[MazeMinigame] à¹€à¸£à¸´à¹ˆà¸¡à¹€à¸à¸¡à¹ƒà¸«à¸¡à¹ˆ!")
	is_dragging = false
	collision_count = 0
	_reset_item()
	_update_ui()

func _update_ui():
	"""à¸­à¸±à¸›à¹€à¸”à¸• UI"""
	status_label.text = "à¸à¸²à¸£à¸Šà¸™: %d/%d" % [collision_count, max_collisions]
	
	if collision_count >= max_collisions:
		status_label.modulate = Color.RED
	elif collision_count > 0:
		status_label.modulate = Color.YELLOW
	else:
		status_label.modulate = Color.WHITE

func _process(_delta):
	if not is_active:
		return
	
	# à¹€à¸Šà¹‡à¸„à¸§à¹ˆà¸²à¹„à¸­à¹€à¸—à¹‡à¸¡à¸­à¸­à¸à¸ˆà¸²à¸à¹€à¸‚à¸²à¸§à¸‡à¸à¸•à¹à¸¥à¹‰à¸§à¸«à¸£à¸·à¸­à¸¢à¸±à¸‡ (à¸™à¸­à¸ MazeContainer)
	if item and not is_dragging:
		var item_pos = item.global_position
		var maze_pos = maze_container.global_position
		var distance = item_pos.distance_to(maze_pos)
		
		# à¸–à¹‰à¸²à¸«à¹ˆà¸²à¸‡à¸ˆà¸²à¸à¸ˆà¸¸à¸”à¸à¸¥à¸²à¸‡à¹€à¸‚à¸²à¸§à¸‡à¸à¸•à¸¡à¸²à¸à¸à¸§à¹ˆà¸² 400 à¸à¸´à¸à¹€à¸‹à¸¥ = à¸­à¸­à¸à¸ˆà¸²à¸à¹€à¸‚à¸²à¸§à¸‡à¸à¸•
		if distance > 400:
			_complete_minigame()

func _complete_minigame():
	"""à¸ˆà¸šà¹€à¸à¸¡ - à¸ªà¸³à¹€à¸£à¹‡à¸ˆ!"""
	if not is_active:
		return
	
	print("[MazeMinigame] à¸ªà¸³à¹€à¸£à¹‡à¸ˆ! à¸«à¸¢à¸´à¸šà¹„à¸­à¹€à¸—à¹‡à¸¡à¸­à¸­à¸à¸¡à¸²à¹„à¸”à¹‰à¹‚à¸”à¸¢à¹„à¸¡à¹ˆà¸Šà¸™à¹€à¸à¸´à¸™!")
	is_active = false
	is_dragging = false
	
	# à¹à¸ªà¸”à¸‡à¸‚à¹‰à¸­à¸„à¸§à¸²à¸¡à¸ªà¸³à¹€à¸£à¹‡à¸ˆ
	instruction_label.text = "à¸ªà¸³à¹€à¸£à¹‡à¸ˆ! ğŸ‰"
	instruction_label.modulate = Color.GREEN
	
	await get_tree().create_timer(1.5).timeout
	
	# à¸›à¸¥à¸”à¸¥à¹‡à¸­à¸„à¸œà¸¹à¹‰à¹€à¸¥à¹ˆà¸™
	var player = get_tree().get_first_node_in_group("player")
	if player:
		player.set_physics_process(true)
		if player.has_method("set_can_move"):
			player.set_can_move(true)
	
	hide()
	completed.emit()
	print("[MazeMinigame] à¸ªà¹ˆà¸‡à¸ªà¸±à¸à¸à¸²à¸“ 'completed'")
